ThreadTracker: ignore idle default coroutine executor thread in JDK 11
GitOrigin-RevId: 7d59015498647f9b652c453f6f3fad3349ee1ab0